[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Email.JPG" type="Texture" id=1]
[ext_resource path="res://Scripts/Email.gd" type="Script" id=2]
[ext_resource path="res://Assets/Purple.png" type="Texture" id=3]
[ext_resource path="res://Assets/lmb.png" type="Texture" id=4]
[ext_resource path="res://Assets/scr.png" type="Texture" id=5]
[ext_resource path="res://Assets/mouse.png" type="Texture" id=6]
[ext_resource path="res://Assets/rmb.png" type="Texture" id=7]

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 50

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 36.0

[node name="Email" type="Node2D"]
script = ExtResource( 2 )

[node name="SplashScreen" type="KinematicBody2D" parent="."]
position = Vector2( -960, 0 )

[node name="SplashScreenSprite" type="Sprite" parent="SplashScreen"]
position = Vector2( 480, 360 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="SplashScreen"]
one_shot = true
autostart = true

[node name="UI" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="UI"]
position = Vector2( 769.65, 266.61 )
rotation = 1.5708
scale = Vector2( 11.5017, 2253.3 )
z_index = -2
texture = SubResource( 3 )

[node name="Words" type="Node2D" parent="UI"]

[node name="Mail" type="Label" parent="UI/Words"]
margin_left = 7.0
margin_top = 7.0
margin_right = 40.0
margin_bottom = 21.0
size_flags_vertical = 1
text = "MAIL"

[node name="Welcome" type="Label" parent="UI/Words"]
margin_left = 308.0
margin_top = 29.0
margin_right = 635.0
margin_bottom = 43.0
size_flags_vertical = 1
align = 1

[node name="TopBar" type="Line2D" parent="UI"]
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="DividerBar" type="Line2D" parent="UI"]
position = Vector2( 0, 25 )
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="SignUpWindow" type="KinematicBody2D" parent="UI"]
z_as_relative = false

[node name="EmailInput" type="TextEdit" parent="UI/SignUpWindow"]
margin_left = 1300.0
margin_top = 300.0
margin_right = 1570.0
margin_bottom = 320.0
hint_tooltip = "Email Address"

[node name="PasswordInput" type="TextEdit" parent="UI/SignUpWindow"]
margin_left = 1300.0
margin_top = 380.0
margin_right = 1570.0
margin_bottom = 400.0
hint_tooltip = "Password"

[node name="SignUpText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1405.0
margin_top = 200.0
margin_right = 1444.0
margin_bottom = 214.0
text = "Sign Up"
align = 1

[node name="SignUpError" type="Label" parent="UI/SignUpWindow"]
margin_left = 1228.0
margin_top = 411.0
margin_right = 1648.0
margin_bottom = 425.0
align = 1

[node name="EmailText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1305.0
margin_top = 280.0
margin_right = 1344.0
margin_bottom = 294.0
text = "Email (Must End In \"@mail.com\")"

[node name="PasswordText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1305.0
margin_top = 360.0
margin_right = 1365.0
margin_bottom = 374.0
text = "Password (Must Be More Than 4 Characters)"

[node name="CreateAccount" type="Button" parent="UI/SignUpWindow"]
margin_left = 1380.0
margin_top = 440.0
margin_right = 1489.0
margin_bottom = 460.0
text = "Create Account"

[node name="BG" type="Sprite" parent="UI/SignUpWindow"]
position = Vector2( 1440, 385.5 )
scale = Vector2( 8.06723, 5.81739 )
z_index = -2
z_as_relative = false
texture = ExtResource( 3 )

[node name="SendWindow" type="KinematicBody2D" parent="UI"]
position = Vector2( -960, 720 )
z_as_relative = false

[node name="SubjectInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 278.0
margin_right = 1570.0
margin_bottom = 298.0
hint_tooltip = "Email Address"

[node name="RecipientInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 231.0
margin_right = 1570.0
margin_bottom = 251.0
hint_tooltip = "Email Address"

[node name="BodyInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 325.0
margin_right = 1570.0
margin_bottom = 456.0
hint_tooltip = "Password"
wrap_enabled = true

[node name="ComposeEmailText" type="Label" parent="UI/SendWindow"]
margin_left = 1373.0
margin_top = 173.0
margin_right = 1493.0
margin_bottom = 187.0
text = "Compose An Email"
align = 1

[node name="SubjectText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 258.0
margin_right = 1513.0
margin_bottom = 272.0
text = "Message Subject"

[node name="RecipientText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 210.0
margin_right = 1569.0
margin_bottom = 224.0
text = "Message Recipient (Ends In \"@mail.com\")"

[node name="BodyText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 305.0
margin_right = 1394.0
margin_bottom = 319.0
text = "Message Body"

[node name="SendEmail" type="Button" parent="UI/SendWindow"]
margin_left = 1380.0
margin_top = 494.0
margin_right = 1489.0
margin_bottom = 514.0
text = "Send"

[node name="ExitEmail" type="Button" parent="UI/SendWindow"]
margin_left = 1380.0
margin_top = 528.0
margin_right = 1489.0
margin_bottom = 548.0
text = "Exit"

[node name="FeedbackText" type="Label" parent="UI/SendWindow"]
margin_left = 1230.0
margin_top = 467.0
margin_right = 1650.0
margin_bottom = 481.0
align = 1

[node name="SentText" type="Label" parent="UI/SendWindow"]
margin_left = 1230.0
margin_top = 467.0
margin_right = 1650.0
margin_bottom = 481.0
align = 1

[node name="BG" type="Sprite" parent="UI/SendWindow"]
position = Vector2( 1440, 385.5 )
scale = Vector2( 8.06723, 5.81739 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="ComposeEmail" type="Button" parent="UI"]
margin_left = 1.0
margin_top = 26.0
margin_right = 83.0
margin_bottom = 46.0
disabled = true
text = "Compose Email"

[node name="WindowAnchor" type="Node2D" parent="UI"]
position = Vector2( 480, 360 )

[node name="OffScreenAnchor" type="Node2D" parent="UI"]
position = Vector2( 1440, 1080 )

[node name="SignUp" type="Button" parent="UI"]
margin_left = 898.0
margin_top = 26.0
margin_right = 958.0
margin_bottom = 46.0
text = "Sign Up"

[node name="BG2" type="Sprite" parent="UI"]
position = Vector2( 480, 385.5 )
scale = Vector2( 8.06723, 5.81739 )
z_index = -2
z_as_relative = false
texture = ExtResource( 3 )

[node name="InboxWindow" type="KinematicBody2D" parent="UI"]
position = Vector2( 1440, 1105.5 )
scale = Vector2( 8.06723, 5.81739 )

[node name="BG3" type="Sprite" parent="UI/InboxWindow"]
position = Vector2( 4.57764e-05, -1.52588e-05 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="InboxText" type="Label" parent="UI/InboxWindow"]
margin_left = -2.54681
margin_top = -57.3284
margin_right = 33.4532
margin_bottom = -43.3284
rect_scale = Vector2( 0.15, 0.2 )
text = "Inbox"
align = 1

[node name="NewMessageText" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = -49.0779
margin_right = 166.049
margin_bottom = -35.0779
rect_scale = Vector2( 0.15, 0.2 )
text = "You Have 5 New Messages"
align = 1

[node name="MessageOneSubject" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = -24.6684
margin_right = 166.049
margin_bottom = -10.6684
rect_scale = Vector2( 0.15, 0.2 )
text = "Subject: High School Buddies"
align = 1

[node name="MessageTwoSubject" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = -16.2455
margin_right = 166.049
margin_bottom = -2.24548
rect_scale = Vector2( 0.15, 0.2 )
text = "Subject: John Cena Sighting?"
align = 1

[node name="MessageThreeSubject" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = -7.13489
margin_right = 166.049
margin_bottom = 6.86511
rect_scale = Vector2( 0.15, 0.2 )
text = "Subject: Invasion"
align = 1

[node name="MessageFourSubject" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = 2.31958
margin_right = 166.049
margin_bottom = 16.3196
rect_scale = Vector2( 0.15, 0.2 )
text = "Subject: Cats!"
align = 1

[node name="MessageFiveSubject" type="Label" parent="UI/InboxWindow"]
margin_left = -13.951
margin_top = 10.5701
margin_right = 166.049
margin_bottom = 24.5701
rect_scale = Vector2( 0.15, 0.2 )
text = "Subject: Vegetables :("
align = 1

[node name="table" type="Node2D" parent="UI/InboxWindow"]

[node name="row 2" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, -32 )
scale = Vector2( 0.123958, 0.171898 )
z_as_relative = false
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="row 3" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, -23.1406 )
scale = Vector2( 0.123958, 0.171898 )
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="row 4" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, -14.2813 )
scale = Vector2( 0.123958, 0.171898 )
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="row 5" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, -5.25 )
scale = Vector2( 0.123958, 0.171898 )
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="row 6" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, 3.4375 )
scale = Vector2( 0.123958, 0.171898 )
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="row 7" type="Line2D" parent="UI/InboxWindow/table"]
position = Vector2( -60.74, 12.2969 )
scale = Vector2( 0.123958, 0.171898 )
points = PoolVector2Array( 974, 24, 479.077, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="ReadWindow" type="KinematicBody2D" parent="UI/InboxWindow"]
visible = false
position = Vector2( -178.5, -66.2668 )
scale = Vector2( 0.123958, 0.171898 )
z_index = 16
z_as_relative = false

[node name="Subject" type="TextEdit" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1300.0
margin_top = 278.0
margin_right = 1570.0
margin_bottom = 298.0
hint_tooltip = "Email Address"
readonly = true

[node name="Sender" type="TextEdit" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1300.0
margin_top = 485.0
margin_right = 1570.0
margin_bottom = 505.0
hint_tooltip = "Email Address"
readonly = true

[node name="Body" type="TextEdit" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1300.0
margin_top = 325.0
margin_right = 1570.0
margin_bottom = 456.0
hint_tooltip = "Password"
readonly = true
wrap_enabled = true

[node name="ReadEmailText" type="Label" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1373.0
margin_top = 235.0
margin_right = 1493.0
margin_bottom = 249.0
text = "New Message"
align = 1

[node name="SentByText" type="Label" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1197.0
margin_top = 466.0
margin_right = 1461.0
margin_bottom = 480.0
text = "Sent By:"
align = 1

[node name="SubjectText" type="Label" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1302.0
margin_top = 258.0
margin_right = 1513.0
margin_bottom = 272.0
text = "Message Subject"

[node name="BodyText" type="Label" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1302.0
margin_top = 305.0
margin_right = 1394.0
margin_bottom = 319.0
text = "Message Body"

[node name="CloseEmail" type="Button" parent="UI/InboxWindow/ReadWindow"]
margin_left = 1380.0
margin_top = 519.0
margin_right = 1489.0
margin_bottom = 539.0
text = "Close"

[node name="BG" type="Sprite" parent="UI/InboxWindow/ReadWindow"]
position = Vector2( 1440, 385.5 )
scale = Vector2( 8.06723, 5.81739 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="UI/InboxWindow"]
margin_left = -178.5
margin_top = -190.034
margin_right = -138.5
margin_bottom = -176.034

[node name="OpenEmailButtons" type="KinematicBody2D" parent="UI"]
position = Vector2( -1800, 0 )
z_index = 5
z_as_relative = false

[node name="OpenMessage1" type="Button" parent="UI/OpenEmailButtons"]
margin_left = 34.0
margin_top = 239.0
margin_right = 141.0
margin_bottom = 259.0
text = "Open Message"

[node name="OpenMessage2" type="Button" parent="UI/OpenEmailButtons"]
margin_left = 34.0
margin_top = 291.0
margin_right = 141.0
margin_bottom = 311.0
text = "Open Message"

[node name="OpenMessage3" type="Button" parent="UI/OpenEmailButtons"]
margin_left = 34.0
margin_top = 343.0
margin_right = 141.0
margin_bottom = 363.0
text = "Open Message"

[node name="OpenMessage4" type="Button" parent="UI/OpenEmailButtons"]
margin_left = 34.0
margin_top = 395.0
margin_right = 141.0
margin_bottom = 415.0
text = "Open Message"

[node name="OpenMessage5" type="Button" parent="UI/OpenEmailButtons"]
margin_left = 34.0
margin_top = 446.0
margin_right = 141.0
margin_bottom = 466.0
text = "Open Message"

[node name="Cameras" type="Node2D" parent="."]
position = Vector2( -960, 0 )

[node name="Camera2" type="Camera2D" parent="Cameras"]
offset = Vector2( 1440, 360 )

[node name="Camera1" type="Camera2D" parent="Cameras"]
offset = Vector2( 480, 360 )
current = true

[node name="Mouse" type="KinematicBody2D" parent="."]
position = Vector2( -50, -50 )
scale = Vector2( 0.5, 0.5 )
z_index = 19
z_as_relative = false
collision_layer = 4095

[node name="open" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="left" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="right" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="scroll" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="clickzone" type="Area2D" parent="Mouse"]
collision_layer = 15
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/clickzone"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )
